# CW_3

./: pyproject.toml
models/: operation.py
src/: main.py  setings.py  utils.py
tests/: test_operation.py  test_operations.json  test_setings.py  test_utils.py
